# dcl-break-timers

./: .gitignore  LICENSE.txt  README.md  app.py  break.html  date.html  dates.html  datetimes.html  datetimes.js  dynamodb.py  example.env  gui.py  index.html  pyproject.toml  readme2index.sh  schedule.html  schedule.js  skype.html  skype.py  start_chrome_tz.sh  timer.html  timer.html.fail  zoom.html  zoom.py  zoom_meeting_info.html  zoom_test.py
test/selenium/: timers.side
