[tool.poetry]
name = "dcl-break-timers"
version = "0.1.0"
description = ""
authors = ["David Hunter <dhunter@digitalcreation.co.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
pyOpenSSL = "^22.0.0"

[tool.poetry.dev-dependencies]
markdown2 = "^2.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
