[tool.poetry]
name = "dcl-break-timers"
version = "0.1.0"
description = ""
authors = ["David Hunter <dhunter@digitalcreation.co.nz>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
pyOpenSSL = "^22.0.0"
pyzoom = "^0.1.15"
python-dotenv = "^0.21.0"
SkPy = "^0.10.4"
flet = "^0.2.4"
pytz = "^2022.7"

[tool.poetry.dev-dependencies]
markdown2 = "^2.4.3"
boto3 = "^1.24.84"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
